доделал html и css

--- a/index.html
+++ b/index.html
@@ -4,28 +4,57 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet">
   <title>Become a member</title>
 </head>
 
 <body>
   <div class="container">
-    <div class="block-content">
+    <div class="content">
       <header>lorem ipsum dolor</header>
       <h1>Become a member</h1>
       <p class="text">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim ad veniam.
       </p>
-      <div class="button">
-        <div class="button-google">
-          <img class="button__img-google" src="img/google-plus-symbol.png">
+      <div class="nav">
+        <div class="button">
+          <div class="button-social-network">
+            <img class="button__img-social-network" src="img/google-plus-symbol.png">
+          </div>
+          <div class="button__text-img">
+            <p>sign up using google <img class="button__img-plus" src="img/plus.png"></p>
+          </div>
         </div>
-        <div class="button__text-img">
-          <p>sign up using google <img class="button__img-plus" src="img/plus.png"></p>
+        <div class="button">
+          <div class="button-social-network">
+            <img class="button__img-social-network" src="img/facebook.png">
+          </div>
+          <div class="button__text-img">
+            <p>sign up using facebook</p>
+          </div>
+        </div>
+        <div class="button">
+          <div class="button-social-network">
+            <img class="button__img-social-network" src="img/twitter.png">
+          </div>
+          <div class="button__text-img">
+            <p>sign up using twitter</p>
+          </div>
         </div>
       </div>
+      <hr noshade>
+      <footer>
+        <p class="footer__text-left">
+          You can also sign in using an emailadres
+        </p>
+        <p class="footer__text-right">
+          use your email <img class="footer__img" src="img/right-arrow.png">
+        </p>
+
+      </footer>
     </div>
-    <div class="block-photo">
-      <img class="block-photo__img-city" src="img/cityyy.jpeg">
+    <div class="photo">
+      <img class="photo__img-city" src="img/city.jpeg">
     </div>
   </div>
 </body>
